# nazar-blocker-gtk

./: .gitignore  PKGBUILD  Readme.md  com.github.SubhanGadirli.NazarBlocker.json  meson.build  nazar-blocker.spec  nazar.desktop  nazar.pro  resources.qrc
.flatpak-builder/checksums/: x86_64-com.github.SubhanGadirli.NazarBlocker.json
debian/: changelog  control  copyright  rules
po/: nazar_tr.ts  tr.po
src/: main.c  main.cpp
